[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/xBlake-2012x/Nofication-pythonlibrary"
Repository = "https://github.com/xBlake-2012x/Nofication-pythonlibrary"


[project]
name = "Notifications"
version = "1.0.0"
description = "Show notification pop-ups"
readme = "README.md"
authors = [{ name = "xBlake_2012x", email = "Blake_Brent@outlook.com" }]
license = { file = "LICENSE" }
classifiers = [
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3",
]
requires-python = ">=3.6"
